--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "nuxt": "^2.14.4",
+    "nuxt-i18n": "^6.15.1",
     "nuxt-seo": "^1.3.1",
     "vue-gtag": "^1.8.0",
+    "vue-i18n": "^8.21.1",
     "vue-moment": "^4.1.0"
   },
   "devDependencies": {
