--- a/package.json
+++ b/package.json
@@ -9,21 +9,22 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.12.2",
+    "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/sitemap": "^2.4.0",
-    "@tailwindcss/ui": "^0.6.0",
-    "cheerio": "^1.0.0-rc.3",
-    "cross-env": "^7.0.2",
+    "@tailwindcss/ui": "^0.7.2",
+    "cheerio": "^1.0.0-rc.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
-    "nuxt": "^2.14.4",
-    "nuxt-i18n": "^6.15.1",
-    "nuxt-seo": "^1.3.1",
-    "vue-gtag": "^1.8.0",
-    "vue-i18n": "^8.21.1",
+    "express": "^4.17.1",
+    "nuxt": "^2.15.2",
+    "nuxt-i18n": "^6.20.4",
+    "nuxt-seo": "^1.5.0",
+    "vue-gtag": "^1.11.0",
+    "vue-i18n": "^8.23.0",
     "vue-moment": "^4.1.0"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^3.0.2",
-    "nodemon": "^2.0.4"
+    "@nuxtjs/tailwindcss": "^3.4.2",
+    "nodemon": "^2.0.7"
   }
 }
