--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "nuxt": "^2.15.2",
+    "nuxt": "^2.15.3",
     "nuxt-i18n": "^6.20.4",
     "nuxt-seo": "^1.5.0",
     "vue-gtag": "^1.11.0",
@@ -24,7 +24,8 @@
     "vue-moment": "^4.1.0"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^3.4.2",
+    "@nuxtjs/tailwindcss": "^4.0.1",
+    "@tailwindcss/forms": "^0.2.1",
     "nodemon": "^2.0.7"
   }
 }
