--- a/package.json
+++ b/package.json
@@ -11,21 +11,19 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/sitemap": "^2.4.0",
-    "@tailwindcss/ui": "^0.7.2",
     "cheerio": "^1.0.0-rc.5",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "nuxt": "^2.15.3",
-    "nuxt-i18n": "^6.20.4",
     "nuxt-seo": "^1.5.0",
     "vue-gtag": "^1.11.0",
-    "vue-i18n": "^8.23.0",
+    "vue-i18n": "^8.24.1",
     "vue-moment": "^4.1.0"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^4.0.1",
-    "@tailwindcss/forms": "^0.2.1",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "postcss": "^8.2.8"
   }
 }
