--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon ./index.js",
-    "start": "cross-env NODE_ENV=production node ./index.js",
+    "dev": "nuxt",
+    "start": "nuxt start",
     "build": "nuxt build",
     "generate": "nuxt generate"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/sitemap": "^2.4.0",
+    "@tailwindcss/forms": "^0.2.1",
     "cheerio": "^1.0.0-rc.5",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
