--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,8 @@
 {
-  "extends": [
-    "github>EmpoHQ/renovate-config"
-  ]
+  "config": {
+    "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+    "extends": [
+      "github>EmpoHQ/renovate-config"
+    ]
+  }
 }
