--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "nuxt-seo": "^1.5.0",
     "vue-gtag": "^1.11.0",
     "vue-i18n": "^8.24.1",
-    "vue-moment": "^4.1.0"
+    "vue-moment": "^4.1.0",
+    "is-svg": "^4.2.2"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^4.0.1",
