--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "nuxt": "^2.15.3",
+    "nuxt": "^2.15.5",
     "nuxt-seo": "^1.5.0",
     "vue-gtag": "^1.11.0",
     "vue-i18n": "^8.24.1",
@@ -24,8 +24,8 @@
     "is-svg": "^4.2.2"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^4.0.1",
+    "@nuxtjs/tailwindcss": "4.1.0",
     "nodemon": "^2.0.7",
-    "postcss": "^8.2.8"
+    "postcss": "8.2.15"
   }
 }
