--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "github>EmpoHQ/renovate-config-public"
+    "github>EmpoHQ/renovate-config"
   ]
 }
