--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/sitemap": "^2.4.0",
     "@tailwindcss/forms": "^0.3.0",
+    "@tailwindcss/jit": "0.1.18",
     "cheerio": "^1.0.0-rc.5",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
